--- a/PolymonialsApp/PolymonialsApp.vcxproj.filters
+++ b/PolymonialsApp/PolymonialsApp.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="polymonials.cpp">
+    <ClCompile Include="polynomials.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
   </ItemGroup>
