--- a/PolymonialsUnitTest/PolymonialsUnitTest.vcxproj.filters
+++ b/PolymonialsUnitTest/PolymonialsUnitTest.vcxproj.filters
@@ -15,10 +15,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="PolymonialsUnitTest.cpp">
+    <ClCompile Include="pch.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
-    <ClCompile Include="pch.cpp">
+    <ClCompile Include="PolynomialsUnitTest.cpp">
       <Filter>Pliki źródłowe</Filter>
     </ClCompile>
   </ItemGroup>
